Fix body overflow-x scroll

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ General
 body {
     margin: 0;
     background: #f1f1f1;
+    overflow: hidden;
 }
 
 .clearfix::after {
@@ -209,7 +210,7 @@ body {
 **********************************/
 main {
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     padding: 0;
     flex-grow: 1;
     flex-basis: 0%;
@@ -217,6 +218,7 @@ main {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+    overflow: auto;
 }
 
 /*** main-top ***/
